# designingCompilers

./: CMakeLists.txt  Diagram.cpp  Diagram.h  GlobalData.h  GrammarSymbols.h  Scaner.cpp  Scaner.h  SemanticTree.cpp  SemanticTree.h  Translate.cpp  Translate.h  TriadGenerator.cpp  TriadGenerator.h  TriadHelper.h  TriadOptimizer.cpp  TriadOptimizer.h  main.cpp
